<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">অভিযোগ প্রতিকার ব্যবস্থা </string>
    <string name="short_detail">পরিকল্পনা ও বাস্তবায়নে : মন্ত্রিপরিষদ বিভাগ ও এটুআই প্রোগ্রাম \nকারিগরি সহযোগিতায় : রিভ সিস্টেমস</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="dialog_yes">হ্যাঁ</string>
    <string name="dialog_no">না</string>
    <string name="dicided">dicided</string>
    <string name="save_signin">"সাইন ইন তথ্য সংরক্ষণ করুন?"</string>
    <string name="lang">"lang=en"</string>
    <string name="no_internet_title">"ইন্টারনেট সংযোগ নেই!"</string>
    <string name="no_internet_message">"ইন্টারনেট সংযোগ করুন!"</string>
    <string name="forgot_password">"পাসওয়ার্ড ভুলে গেছেন"</string>
    <string name="action_complainant_sign_in">"অভিযোগকারী লগইন"</string>
    <string name="action_admin_sign_in">"প্রশাসনিক লগইন"</string>
    <string name="no_account">"অ্যাকাউন্ট নেই ?"</string>
    <string name="action_sign_up">"নিবন্ধন করুন"</string>
    <string name="username">"মোবাইল নম্বর/ইউজার আইডি"</string>
    <string name="password">"পিন"</string>
    <string name="valid_username_pass">দয়া করে সঠিক ব্যবহারকারী নাম বা পাসওয়ার্ড লিখুন</string>
    <string name="logout_success">লগ আউট সফল</string>
    <string name="choose_selection">আপনার নির্বাচন বাছাই করুন</string>
    <string name="keep_looged_in">লগ ইন রাখুন?</string>
    <string name="log_out">প্রস্থান ?</string>
    <string name="cancel">বাতিল</string>
    <string name="previous_page">আগের পেজ</string>
    <string name="submit">সাবমিট</string>
    <string name="empty_username_user">"আপনার মোবাইল নাম্বার দিন"</string>
    <string name="empty_username_admin">"আপনার ইউজার আইডি দিন"</string>
    <string name="valid_username">"একটি বৈধ মোবাইল নম্বর দিন"</string>
    <string name="valid_username_pin">"একটি বৈধ মোবাইল নম্বর বা পিন দিন"</string>
    <string name="empty_pin">"আপনার পিন দিন"</string>
    <string name="prompt_exit">প্রস্থান করতে চান?</string>
    <string name="action_settings">আপনার নির্বাচন</string>
    <string name="try_again">লগ ইন রাখুন?</string>
    <string name="close_app">প্রস্থান ?</string>
    <string name="error">বাতিল ?</string>
    <string name="no_internet_connection">Previous page</string>
    <string name="server_connection_fail">সাবমিট</string>
    <string name="logged_in">লগ ইন</string>
    <string name="authorization">Authorization</string>
    <string name="db_name">user_db</string>
    <string name="saveCookies">saveCookies</string>
    <string name="privacy_policy">প্রাইভেসি পলিসি</string>
    <string name="ok">ওকে</string>

</resources>
