<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
   >

    <LinearLayout
        android:id="@+id/headerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorBlueDark">

        <TextView
            android:id="@+id/banglaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="অভিযোগ প্রতিকার ব্যবস্থা"
            android:layout_marginTop="@dimen/vertical_4dp_margin"
            android:textColor="@color/text_color_primary_inverse"
            android:textSize="@dimen/page_header_bangla_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/englishText"
            android:layout_below="@+id/banglaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_4dp_margin"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Grievance Redress System"
            android:textColor="@color/text_color_english_header"
            android:textSize="@dimen/page_header_english_text"
           />



    </LinearLayout>



        <!--<com.shohoz.bus.android.view.widget.ProgressBar-->
            <!--android:id="@+id/login_progress_bar"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/horizontal_10dip_margin"-->
            <!--android:visibility="gone"-->
            <!--app:animatedResource="@drawable/shohoz_loader" />-->

        <!--<ScrollView-->
            <!--android:id="@+id/login_form_view"-->
            <!--android:layout_below="@+id/headerLL"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->


            <LinearLayout
                android:id="@+id/login_form"
                android:layout_below="@+id/headerLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/grs_image_top_margin"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/login_logo" />
                </RelativeLayout>


                    <EditText
                        android:id="@+id/mobile_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_20dip"
                        android:layout_marginRight="@dimen/padding_20dip"
                        android:layout_marginTop="@dimen/grs_image_top_margin"
                        android:padding="@dimen/vertical_8dp_margin"
                        android:maxLength="@integer/mobile_number_highest_character"
                        android:hint="@string/username"
                        android:maxLines="@integer/single_line_text"
                        android:background="@color/indicator"
                        android:textSize="@dimen/usernamePassword_text"
                        android:singleLine="true" />



              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">

                <com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
                    style="@style/ms9_DefaultShadowStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:ms9_shadowElevation="4dp"
                    app:ms9_shadowTranslationZ="2dp">

                    <LinearLayout
                        android:id="@+id/previous_page_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/grs_image_top_margin"
                        android:layout_marginLeft="@dimen/padding_20dip"
                        android:layout_marginTop="@dimen/button_margin_top"
                        android:background="@drawable/custom_border"
                        android:clickable="true"
                        android:gravity="center_vertical|center"
                        android:orientation="horizontal"
                        android:padding="10dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/previous_page"
                            android:textColor="@color/text_color_primary_inverse"
                            android:textSize="@dimen/button_text_size"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>
                  <com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
                      style="@style/ms9_DefaultShadowStyle"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      app:ms9_shadowElevation="4dp"
                      app:ms9_shadowTranslationZ="2dp">

                      <LinearLayout
                          android:id="@+id/admin_sign_in_button"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="@dimen/grs_image_top_margin"
                          android:layout_marginLeft="@dimen/horizontal_10dip_margin"
                          android:layout_marginRight="@dimen/padding_20dip"
                          android:layout_marginTop="@dimen/button_margin_top"
                          android:background="@color/orange_button_normal"
                          android:clickable="true"
                          android:gravity="center_vertical|center"
                          android:orientation="horizontal"
                          android:padding="10dip">

                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/submit"
                              android:textColor="@color/text_color_primary_inverse"
                              android:textSize="@dimen/button_text_size"
                              android:textStyle="bold" />

                      </LinearLayout>

                  </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>
              </LinearLayout>


            </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/footer"
            android:background="@android:color/white"
            tools:background="@android:color/white"
            android:id="@+id/footers">
        </ImageView>
    </RelativeLayout>

</RelativeLayout>
